--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(71, 22, 117);
+  display: flex;
+  flex-direction: column;
+  color: wheat;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  margin: 50px auto;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  margin: 0 auto;
+  width: 70%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.content {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 70px;
 }
+.enter {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-right: 30px;
+  margin-bottom: 20px;
+}
+input {
+  width: 75%;
+  height: 34px;
+  border: none;
+  outline: none;
+  font-size: 24px;
+  padding: 4px;
+  padding-left: 12px;
+  border-radius: 10px;
+}
+select {
+  width: 40%;
+  height: 42px;
+  padding: 4px;
+  font-size: 16px;
+  outline: none;
+}
+.icon {
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  padding: 3px;
+  border-radius: 20px;
+  background-color: blueviolet;
+  cursor: pointer;
+}
+.newback {
+  background-color: rgb(213, 41, 64);
+}
+#complete {
+  text-decoration: line-through;
+  opacity: 40%;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-decoration-color: rgb(110, 234, 110);
+}
+#uncomplete {
 }
